@@ -4,6 +4,7 @@
    - Opening of body html tag was missing on some pages in image output
      example cgi (examples/vnstat.cgi)
  - New
+   - Add database data merge support as --merge (work in progress)
    - Add exit status 2 options to --alert for making it possible to
      differentiate alerts from errors (exit status 1)
    - Add --dbiflist also to vnstati command
